--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
            <artifactId>modern-docking-multi-app</artifactId>
             <version>0.11.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE170</version>
+        </dependency>
     </dependencies>
     <build>
     <plugins>
