--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.45.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>4.1.0</version>
+        </dependency>
     </dependencies>
     <build>
     <plugins>
