--- a/src/main/java/app/netlify/spkisp_ramdani/assets/reports/.settings/org.eclipse.core.resources.prefs
+++ b/src/main/java/app/netlify/spkisp_ramdani/assets/reports/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,7 @@
 eclipse.preferences.version=1
 encoding/Blank_A4.jrxml=UTF-8
+encoding/LaporanBobot.jrxml=UTF-8
+encoding/LaporanNilai.jrxml=UTF-8
+encoding/LaporanPaket.jrxml=UTF-8
 encoding/LaporanRanking.jrxml=UTF-8
+encoding/LaporanSkorSAW.jrxml=UTF-8
